Fix OAuth nonce replay protection